k8s/identity-system/dex/service.yaml
# A service for both internal use and for the Ingress.
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: identity-system
spec:
  ports:
  - name: http
    port: 5556
  selector:
    app: dex
